# vietnamese-emoji-suggest

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
app/: __init__.py  api.py  streamlit_app.py
data/: README.md  collect_data.py
data/raw/: .gitkeep  augmented_data.csv  initial_data.csv  initial_data.json
notebooks/: 00_research.ipynb  01_eda.ipynb
scripts/: README.md  generate_dataset.py  generate_full_dataset.py  verify_data.py
src/: __init__.py  augmentation.py  evaluation.py  models.py  monitoring.py  personalization.py  preprocessing.py
tests/: __init__.py  test_data_generation.py  test_dataset_generation.py  test_models.py
